# numerical-integration

./: CHANGELOG.md  README.md  numerical-integration.cabal  stack.yaml
.github/workflows/: Stack-lts.yml
cpp/: .Rhistory  NumericalIntegration.h  integration.cpp
essais/: Essais.hs
src/Numerical/: Integration.hs
