name:                numerical-integration
version:             0.1.0.0
synopsis:            Numerical integration.
description:         One-dimensional numerical integration using the 'NumericalIntegration' C++ library.
homepage:            https://github.com/stla/numerical-integration#readme
license:             BSD3
license-file:        LICENSE
author:              Stéphane Laurent
maintainer:          laurent_step@outlook.fr
copyright:           2023 Stéphane Laurent
category:            Numerical
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     LICENSES/LICENSE_Eigen
                     LICENSES/LICENSE_NumericalIntegration
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numerical.Integration
  build-depends:       base >= 4.7 && < 5
  other-extensions:    ForeignFunctionInterface
  include-dirs:        cpp
  C-sources:           cpp/integration.cpp
  install-includes:    cpp/ComputeGaussKronrodNodesWeights.h
                     , cpp/Eigen
                     , cpp/GaussKronrodNodesWeights.h
                     , cpp/Integrator.h
                     , cpp/LaurieGautschi.h
                     , cpp/Monegato.h
                     , cpp/NumericalIntegration.h
                     , cpp/Piessens.h  
  extra-libraries:     stdc++
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/stla/numerical-integration
